--- a/src/pages/(loggedIn)/BookRoom/BookRoom.scss
+++ b/src/pages/(loggedIn)/BookRoom/BookRoom.scss
@@ -264,7 +264,7 @@
   position: sticky;
   top: 0;
   z-index: 2;
-  background: #fff2ea;
+  background: #fff;
   display: flex;
   width: max-content;
   padding-top: 8px;
@@ -289,6 +289,7 @@
   align-items: center;
   min-height: 100px;
   width: max-content;
+  background: #fff;
 }
 
 .corner-cell {
@@ -296,7 +297,7 @@
   left: 0;
   top: 0;
   z-index: 3;
-  background: #fff2ea;
+  background: #fff;
   min-width: 85px;
 }
 
@@ -304,7 +305,7 @@
   position: sticky;
   top: 0;
   z-index: 2;
-  background: #fff2ea;
+  background: #fff;
   min-width: 120px;
   text-align: center;
   padding: 8px 8px 8px 24px;
@@ -336,14 +337,14 @@
   position: sticky;
   left: 0;
   z-index: 1;
-  background: #fff2ea;
+  background: #fff;
   min-width: 85px;
   display: flex;
   align-items: center;
   padding: 0 10px;
   height: 100%;
   z-index: 2;
-  background-color: #fff2ea;
+  background-color: #fff;
 }
 
 .grid-cell {
