--- a/src/pages/(loggedIn)/checkInDetails/CheckInDetails.scss
+++ b/src/pages/(loggedIn)/checkInDetails/CheckInDetails.scss
@@ -2,11 +2,13 @@
   display: flex;
   flex-direction: row;
   gap: 30px;
-  background-color: #ffffff;
+  background-color: #fff2ea;
+  padding-top: 34px;
 
   .check-in-datails,
   .scanned-qr-main-section {
     border: 1px solid #b6c2d3;
+    background-color: #fff;
     border-radius: 24px;
     // width: 50%;
     // height: 795px;
