--- a/src/pages/(loggedIn)/requests/Requests.scss
+++ b/src/pages/(loggedIn)/requests/Requests.scss
@@ -98,6 +98,7 @@
   margin-right: 1rem;
   cursor: pointer;
   padding: 15px 30px;
+  background-color: #fff2ea;
 
   // border-bottom: 2px solid transparent;
 }
@@ -118,4 +119,5 @@
 
 .tab-content {
   margin-top: -16px;
+  background-color: #fff;
 }
