--- a/src/pages/applicationForm/applicationTabs/VerifyDetails/VerifyDetails.scss
+++ b/src/pages/applicationForm/applicationTabs/VerifyDetails/VerifyDetails.scss
@@ -21,13 +21,13 @@
       width: 90%;
       border-collapse: collapse;
       min-width: 600px;
-      
+
       th {
         padding: 10px;
         border: 1px solid #000;
         font-size: 15px;
         color: black;
-        font-weight: 500;
+        font-weight: 300;
         white-space: nowrap;
       }
 
@@ -36,7 +36,7 @@
         border: 1px solid #000;
         font-size: 15px;
         color: black;
-        font-weight: 200;
+        font-weight: 700;
       }
     }
   }
@@ -56,11 +56,10 @@
     }
 
     strong {
-     font-size: 18px;
-    }
-    span{
       font-size: 18px;
-
+    }
+    span {
+      font-size: 18px;
     }
   }
   .edit-icon {
@@ -84,14 +83,13 @@
     }
 
     .address-block {
-      
       padding: 10px;
       // border: 1px solid #ddd;
       border-radius: 5px;
       display: flex;
       gap: 20px;
       flex-direction: column;
-      margin-left: 37px;                                                                         
+      margin-left: 37px;
 
       h3 {
         font-size: 21px;
@@ -113,9 +111,8 @@
         strong {
           font-size: 18px;
         }
-        span{
+        span {
           font-size: 18px;
-
         }
       }
     }
@@ -127,7 +124,6 @@
   }
 
   .button-container {
-   
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -136,9 +132,8 @@
     gap: 10px;
 
     .save {
-     
       background-color: #fff2ea;
-      color: #EA7704;
+      color: #ea7704;
       width: 150px;
       height: 40px;
       text-align: center;
@@ -150,8 +145,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-     
-    
+
       white-space: nowrap;
     }
 
@@ -168,7 +162,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      
     }
   }
 }
@@ -187,16 +180,16 @@
       margin: 10px 0;
       padding: 0;
       width: 100%;
-      
+
       table {
         width: 100%;
         min-width: unset;
-        
+
         th {
           padding: 8px;
           font-size: 13px;
         }
-        
+
         td {
           padding: 8px;
           font-size: 13px;
@@ -210,8 +203,9 @@
 
       p {
         font-size: 16px;
-        
-        strong, span {
+
+        strong,
+        span {
           font-size: 16px;
         }
       }
@@ -237,12 +231,13 @@
         p {
           flex-direction: column;
           gap: 10px;
-          
+
           div {
             width: 100%;
           }
 
-          strong, span {
+          strong,
+          span {
             font-size: 16px;
           }
         }
@@ -252,8 +247,9 @@
     .button-container {
       margin: 20px 0;
       justify-content: center;
-      
-      .save, .submit-button {
+
+      .save,
+      .submit-button {
         width: 120px;
         height: 35px;
         font-size: 16px;
@@ -268,16 +264,16 @@
     .table-container {
       margin: 10px 0;
       width: 100%;
-      
+
       table {
         width: 100%;
         min-width: unset;
-        
+
         th {
           padding: 6px;
           font-size: 12px;
         }
-        
+
         td {
           padding: 6px;
           font-size: 12px;
@@ -288,8 +284,9 @@
     .details-section {
       p {
         font-size: 14px;
-        
-        strong, span {
+
+        strong,
+        span {
           font-size: 14px;
         }
       }
@@ -302,7 +299,8 @@
         }
 
         p {
-          strong, span {
+          strong,
+          span {
             font-size: 14px;
           }
         }
@@ -312,8 +310,9 @@
     .button-container {
       flex-direction: column;
       gap: 15px;
-      
-      .save, .submit-button {
+
+      .save,
+      .submit-button {
         width: 100%;
         max-width: 200px;
       }
