--- a/src/pages/applicationForm/applicationTabs/VerifyDetails/VerifyDetails.scss
+++ b/src/pages/applicationForm/applicationTabs/VerifyDetails/VerifyDetails.scss
@@ -44,11 +44,9 @@
   .details-section {
     margin-left: 26px;
     padding: 10px;
-    margin-top: 20px;
     font-size: 14px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
 
     p {
       margin: 5px 0;
@@ -72,7 +70,7 @@
     margin: 10px 0;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    margin-left: 55px;
 
     h2 {
       font-size: 23px;
