--- a/src/pages/(loggedIn)/requests/Requests.scss
+++ b/src/pages/(loggedIn)/requests/Requests.scss
@@ -61,7 +61,7 @@
 
   /* Customize the header of the calendar */
   .react-datepicker__header {
-    background-color: #f0f0f0;
+    // background-color: #f0f0f0;
     border-bottom: 1px solid #98a2af;
     padding-bottom: 10px;
   }
