--- a/src/pages/(loggedIn)/deeksha/Deeksha.scss
+++ b/src/pages/(loggedIn)/deeksha/Deeksha.scss
@@ -89,6 +89,7 @@
 
         .reminder-btn {
           margin-top: 16px;
+          margin-right: 16px;
           background: #8b5cf6;
           color: white;
           border: none;
