--- a/src/pages/(loggedIn)/donation/AllDonationDetails.scss
+++ b/src/pages/(loggedIn)/donation/AllDonationDetails.scss
@@ -146,7 +146,7 @@
     .filter-options {
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      // gap: 12px;
       margin-bottom: 16px;
     }
 
