--- a/src/components/ui/GuestDetailsPopup/RejectionEmailPopup.scss
+++ b/src/components/ui/GuestDetailsPopup/RejectionEmailPopup.scss
@@ -331,7 +331,7 @@
 
   /* Email Content (Textarea) */
   .email-content {
-    padding: 20px;
+    padding: 0px 20px;
     color: #333;
     font-size: 13px;
     line-height: 1.5;
