--- a/src/pages/(loggedIn)/donation/NewDonation.scss
+++ b/src/pages/(loggedIn)/donation/NewDonation.scss
@@ -216,7 +216,7 @@
     .donor-details {
       width: 100%;
       height: fit-content;
-      max-height: 400px;
+      min-height: 400px;
     }
 
     .donation-history {
