--- a/src/components/ui/header/Header.scss
+++ b/src/components/ui/header/Header.scss
@@ -71,7 +71,7 @@
 
           &.active {
             border-bottom: none;
-            padding: 0px;
+            padding: 10px 0px;
           }
         }
       }
