--- a/src/pages/(loggedIn)/donation/NewDonation.scss
+++ b/src/pages/(loggedIn)/donation/NewDonation.scss
@@ -1991,7 +1991,7 @@ select {
 .info-row {
   padding: 5px;
   display: flex;
-  justify-content: flex-end;
+  // justify-content: flex-end;
 }
 
 .mantra-diksha-select {
