--- a/src/pages/(loggedIn)/donation/AllDonationDetails.scss
+++ b/src/pages/(loggedIn)/donation/AllDonationDetails.scss
@@ -11,6 +11,12 @@
     .page-title {
       margin: 0;
     }
+
+    .export-buttons {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
   }
 
   .donation-header {
